# sync-folders

./: CMakeLists.txt  LICENSE  README.md
include/: SyncFolders.h
src/: SyncFolders.cc  SyncFolders.cpp  SyncFolders.h  main.cpp
